# lab-link

./: AGENTS.md  README.md  lab_sync_plan.md  lab_sync_rewrite_handoff.md  zensical.toml
.github/workflows/: docs.yml  publish-npm.yml  publish-python.yml
docs/: backend.md  frontend.md  get-started.md  how-it-works.md  index.md  publishing.md  python-client.md  security.md
example/app/: main.py  pyproject.toml
example/frontend/: package.json  svelte.config.js  tsconfig.app.json  vite.config.ts
example/frontend/src/: App.svelte
js/: .gitignore  README.md  package.json  tsconfig.json
js/src/: apply-patch.ts  client.ts  index.ts  stream-handle.ts
js/src/auth/: index.ts
js/src/bokeh/: runtime.ts
js/src/core/: index.ts
js/src/model/: index.ts
js/src/react/: index.ts
js/src/svelte/: AppendGraph.svelte  index.svelte.ts  index.ts
js/tests/: auth.test.ts  client.test.ts  runtime.test.ts  stream.test.ts
old/: lab_sync_plan_old.md
plans/: lab-link-starlette-refactor.md  lab_link_python_client_handoff.md  reactive_state_handoff.md
python/: README.md  example.py  pyproject.toml
python/src/lab_link/: __init__.py  auth.py  auth_store.py  client.py  connection_manager.py  core.py  errors.py  persistence.py  pointer.py  proxy.py  reactive.py  state_store.py
python/src/lab_sync/: __init__.py  connection_manager.py  core.py  persistence.py  proxy.py  state_store.py  stream_buffer.py
python/tests/: conftest.py  test_auth.py  test_client.py  test_core.py  test_proxy.py  test_reactive.py  test_state_store.py
