[project]
name = "lab-link"
version = "0.4.0"
description = "Generic server-authoritative sync library for ASGI apps (Starlette, FastAPI)"
readme = "README.md"
authors = [
    { name = "Andrew Mueller", email = "amueller@caltech.edu" }
]
requires-python = ">=3.11"
dependencies = [
    "starlette>=0.40",
    "jsonpatch>=1.33",
    "pydantic>=2.7",
    "websockets>=12.0",
]

[project.urls]
Homepage = "https://sansseriff.github.io/lab-link/"
Repository = "https://github.com/sansseriff/lab-link"
Documentation = "https://sansseriff.github.io/lab-link/"

[project.optional-dependencies]
persist = [
    "sqlmodel>=0.0.24",
]
numpy = ["numpy>=1.24"]
dev = ["pytest", "pytest-asyncio", "httpx", "uvicorn[standard]"]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "uvicorn[standard]>=0.42.0",
]
