[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "starlette>=0.40",
    "lab-link",
    "uvicorn[standard]>=0.42.0",
]

[tool.uv.sources]
lab-link = { path = "../../python", editable = true }

[dependency-groups]
dev = [
    "pyright>=1.1.408",
]
